tests/NormalTests/paczka1/fuzzy1/90223869.err
Error in line 2: aPy S56 41,6
Error in line 13: aPy A538 94,6
Error in line 38: S"6 A"38 17,7
Error in line 37: 7TiH62f A980 76,7
Error in line 40: S56 A538 66,62
